Fixed right to left layout bug.

--- a/src/.styles/ytcenter-styles-centering.css
+++ b/src/.styles/ytcenter-styles-centering.css
@@ -105,6 +105,7 @@ body.ytcenter-channelv2 #page.channel > #guide + #content {
 .ytcenter-site-center.ytcenter-non-resize #watch7-main-container {
   width: 1003px!important;
   padding-left: 0px!important;
+  padding-right: 0px!important;
 }
 
 @media screen and (max-width:1381px) {
@@ -115,10 +116,14 @@ body.ytcenter-channelv2 #page.channel > #guide + #content {
   .ytcenter-site-center.ytcenter-non-resize.ytcenter-guide-visible #player-legacy,
   .ytcenter-site-center.ytcenter-non-resize.ytcenter-guide-visible #watch7-main-container {
     padding-left: 190px!important;
+    padding-right: 190px!important;
     margin: 0!important;
   }
   .ytcenter-site-center.ytcenter-non-resize.ytcenter-guide-visible #guide-container {
     left: 10px!important;
+  }
+  .rtl.ytcenter-site-center.ytcenter-non-resize.ytcenter-guide-visible #guide-container {
+    right: 10px!important;
   }
 }
 
@@ -128,5 +133,10 @@ body.ytcenter-channelv2 #page.channel > #guide + #content {
   .ytcenter-site-center.ytcenter-non-resize.ytcenter-guide-visible.guide-collapsed #watch7-main-container {
     padding-left: 58px!important;
     margin: 0!important;
+  }
+  .rtl.ytcenter-site-center.ytcenter-non-resize.ytcenter-guide-visible.guide-collapsed #player,
+  .rtl.ytcenter-site-center.ytcenter-non-resize.ytcenter-guide-visible.guide-collapsed #player-legacy,
+  .rtl.ytcenter-site-center.ytcenter-non-resize.ytcenter-guide-visible.guide-collapsed #watch7-main-container {
+    padding-right: 58px!important;
   }
 }
